# fbrvideoplataform

./: .env.example  .gitignore  AGENTS.md  package.json
.aiox-core/: version.json  (+5 more)
backend/: Dockerfile  main.py  pyproject.toml
backend/api/routes/: auth.py  media_sourcing.py  productions.py  providers.py  renders.py  review.py  templates.py
backend/api/schemas/: manual_binding.py  production_detail.py  productions.py  review.py  templates.py
backend/application/: errors.py
backend/application/events/: __init__.py  domain_events.py
backend/application/security/: auth.py
backend/domain/audit/: __init__.py  events.py  models.py  service.py
backend/domain/composition/: __init__.py  models.py
backend/domain/context_verification/: __init__.py  contracts.py  models.py  scorer.py
backend/domain/human_review/: __init__.py  bindings.py  models.py  requery.py
backend/domain/media_sourcing/: __init__.py  adapters.py  contracts.py  provider.py  query_strategy.py
backend/domain/production/: __init__.py  aggregate.py  enums.py
backend/domain/render/: __init__.py  models.py  submission.py
backend/domain/structuring/: __init__.py  errors.py  models.py
backend/domain/templates/: __init__.py  contracts.py  registry.py
backend/domain/visual_planning/: __init__.py  errors.py  models.py
backend/tests/: conftest.py  test_composition.py  test_events_orchestration.py  test_manual_bindings.py  test_production_workflow.py  test_render.py  test_repositories.py  test_review_reconciliation.py  test_structuring.py  test_template_and_intake.py  test_visual_planning.py
(+217 files in other folders)
